Gradle 9 and Configuration Cache Compatibility Comprehensive Overhaul
This massive refactoring makes the XTC Gradle plugin and build scripts fully compatible
with Gradle 9 and configuration cache by eliminating all Project references during task
execution, fixing script object references, and implementing proper configuration-time
data capture patterns.

- **Fixed XtcCompileTask Project serialization**: Changed constructor to accept SourceSet
  parameter directly, captured configuration-time data to avoid Project references during execution
- **Fixed CreateStartScripts script object references**: Moved createLauncherScriptTask function
  to XdkDistribution utility class with explicit parameter passing
- **Fixed XtcLauncherTask Project access**: Added configuration-time captured data for XDK
  contents and source set output directories
- **Fixed ProcessResources script object issues**: Changed from closure-based task configuration
  to direct task access, captured git protocol and version data at configuration time
- **Fixed Sync task configuration cache compatibility**: Captured configurations, tasks, and
  other script objects at configuration time instead of accessing them in distribution contents closures

- **Remove stored launcher and fix BuildThreadLauncher**: Eliminated Project access during execution,
  added Logger-based constructor to XtcLauncher and BuildThreadLauncher
- **Eliminate Project references from task hierarchy and extensions**: Removed ConfigurationContainer
  from XtcDefaultTask, removed Project fields from all extension classes, captured configuration
  data at configuration time using providers
- **Improve Gradle 9 configuration cache compatibility**: Replaced createLauncher() execution-time
  Project access with configuration-time launcher creation, captured source sets and output
  directories at configuration time

- **Replace all buildException calls with GradleException**: Eliminated all buildException method
  calls throughout the plug